# embedded-rhai

./: Cargo.toml  memory.x
src/: main.rs
