[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "embedded-rhai"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
alloc-cortex-m = "0.3.5"
embedded-hal = "*"

[dependencies.rhai]
git = "https://github.com/victorkoenders/rhai"
branch = "no_std"
features = ["no_std"]

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.5.3"

# this lets you use `cargo fix`!
[[bin]]
name = "embedded-rhai"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
